Fix the misalignment

--- a/page/review/review.css
+++ b/page/review/review.css
@@ -596,7 +596,7 @@ template {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-content: center;
+    align-content: flex-start;
     justify-content: space-between;
     align-items: center;
     width: fit-content;
